<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
		<TextView  
			android:id="@+id/txt_add_phone_desc"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/app_add_phone"
		    android:textSize="30dip"
		    android:layout_gravity="center"
		    />
	    
	
		    
			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/app_input_name"
			    android:textSize="18dip"
			    />
	
			<EditText android:id="@+id/edt_name"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:inputType="textPhonetic"
			    android:layout_marginTop="5dip"
			    android:layout_marginLeft="30dip"
			    />
	    
	
		    
			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/app_input_phone"
			    android:textSize="18dip"
			    />
	
	
			<EditText android:id="@+id/edt_phone"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content"
			    android:inputType="textPhonetic"
			    android:layout_marginTop="5dip"
			    android:layout_marginLeft="30dip"
			    />
	
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
			<RadioGroup
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:checkedButton="@+id/radgroup_bt_all"
		        android:id="@+id/radgroup_block_type">
		        <RadioButton
		            android:text="来电"
		            android:id="@+id/radgroup_bt_phone"
		            />
		        <RadioButton
		            android:text="短信"
		            android:id="@+id/radgroup_bt_sms" />
		        <RadioButton
		            android:text="全部"
		            android:id="@+id/radgroup_bt_all" />
		    </RadioGroup>
	</LinearLayout>
		
	
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    
				<Button android:id="@+id/btn_save_black_phone"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/app_submit"
					android:gravity="center"
					android:onClick="addBlackPhone"
					android:layout_weight="1"
    				android:background="@drawable/button_selector"
				/>    	 	
				<Button android:id="@+id/btn_cancel"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/app_alert_cancel"
					android:gravity="center"
					android:onClick="cancel"
					android:layout_weight="1"
    				android:background="@drawable/button_selector"
				/>   
		</LinearLayout>

</LinearLayout>
