<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <!-- 
		<TextView android:id="@+id/txt_smslog_name" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:textSize="23dip" 
				android:layout_gravity="left"
				android:gravity="left"
				android:text="@string/app_empty_list"/>
			

		<TextView android:id="@+id/txt_smslog_type" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:textSize="15dip" 
				android:text="@string/app_empty_list"/>
	 -->			
		<TextView android:id="@+id/txt_smslog_phone" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:textSize="20dip" 
				android:gravity="left"
				android:text="@string/app_empty_list"/>
	
		<TextView android:id="@+id/txt_sms_body_label" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:textSize="15dip" 
				android:text="@string/app_sms_showcontent"/>
	
		<TextView android:id="@+id/txt_sms_body" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:textSize="20dip" 
				android:gravity="left"
				android:text="@string/app_empty_list"/>
	
	
		<TextView android:id="@+id/txt_smslog_date" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:textSize="20dip" 
				android:gravity="left"
				android:text="@string/app_empty_list"/>
				
		<Button android:id="@+id/btn_smslog_block"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:textSize="15dip" 
				android:onClick="toAddPhone"
				android:layout_gravity="right"
				android:text="@string/btn_block_this_phone"/>
	
</LinearLayout>